# example-consumer-python-sns

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  samconfig.toml  template.yml
.github/workflows/: build.yml  trigger_partner_docs_update.yml
pacts/: pactflow-example-consumer-python-sns-pactflow-example-provider-python-sns.json
scripts/: deploy.sh  publish.sh
src/_kafka/: product.py
src/_lambda/: product.py
src/product/: product.py  product_repository.py  product_service.py
tests/integration/: test_lambda.py
tests/resources/events/: update.json
tests/unit/: product_service_pact_test.py
