[tool.poetry]
name = "example-consumer-python-kafka"
version = "0.0.0"
description = "Example Python Kafka Consumer"
license = "Proprietary"
authors = ["Mike Geeves <mike.geeves@bearly-compiling.com>"]
readme = 'README.md'
repository = "https://github.com/pactflow/example-consumer-python-kafka"
homepage = "https://github.com/pactflow/example-consumer-python-kafka"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pact-python = "^2.2.2"
