[tool.poetry]
name = "example-consumer-python-sns"
version = "0.0.0"
description = "Example Python AWS SNS Consumer"
license = "Proprietary"
authors = ["Mike Geeves <mike.geeves@bearly-compiling.com>"]
readme = 'README.md'
repository = "https://github.com/pactflow/example-consumer-python-sns"
homepage = "https://github.com/pactflow/example-consumer-python-sns"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-mock = "3.14.0"
pact-python = "2.2.2"
